--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-electron",
-  "version": "0.1.1",
+  "name": "vue-electron-flask",
+  "version": "1.0.1",
   "description": "Simple template for combining Electron with Vue3 and Flask",
   "private": true,
   "scripts": {
@@ -65,7 +65,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/megasanjay/electron-vue-flask-template.git"
+    "url": "https://github.com/megasanjay/electron-vue3-flask.git"
   },
   "keywords": [],
   "author": "Sanjay Soundarajan",
