--- a/.github/workflows/check-misspellings.yml
+++ b/.github/workflows/check-misspellings.yml
@@ -25,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: sobolevn/misspell-fixer-action@master
-      - uses: peter-evans/create-pull-request@v2.4.4
+      - uses: peter-evans/create-pull-request@main
         with:
           token: ${{ secrets.BOT_ACTIONS }}
           commit-message: 'Fixes by misspell-fixer'
