--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.6.5",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
+    "element-plus": "^1.1.0-beta.18",
     "ps-tree": "^1.2.0",
     "semver": "^7.3.5",
     "vue": "^3.0.0"
