--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
     "element-plus": "^1.1.0-beta.18",
+    "pinia": "^2.0.0-rc.10",
     "ps-tree": "^1.2.0",
     "semver": "^7.3.5",
     "vue": "^3.0.0",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
