--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint",
     "electron:build-preclean": "node ./scripts/prebuild.js",
     "python:build": "python -m PyInstaller --onefile --clean ./src/pyflask/api.py --distpath ./src/pyflaskdist",
+    "python:dev": "python ./src/pyflask/api.py",
     "electron:build": "vue-cli-service electron:build",
     "electron:build-release": "vue-cli-service electron:build -p always",
     "electron:serve-precopy": "copyfiles -u 1 ./src/pyflask/** ./dist_electron",
@@ -21,6 +22,7 @@
     "@electron/remote": "^1.2.1",
     "@tailwindcss/line-clamp": "^0.2.2",
     "axios": "^0.21.2",
+    "axios-retry": "^3.2.0",
     "core-js": "^3.6.5",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
@@ -49,6 +51,7 @@
     "postcss": "^7",
     "prettier": "^2.3.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss-debug-screens": "^2.1.0",
     "vue-cli-plugin-electron-builder": "~2.1.1"
   },
   "eslintConfig": {
@@ -76,5 +79,8 @@
   },
   "keywords": [],
   "author": "Sanjay Soundarajan",
-  "license": "MIT"
+  "license": "MIT",
+  "optionalDependencies": {
+    "win-node-env": "^0.4.0"
+  }
 }
