--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
     "copyfiles": "^2.4.1",
+    "dotenv": "^10.0.0",
     "electron": "^13.0.0",
     "electron-devtools-installer": "^3.1.0",
+    "electron-notarize": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "postcss": "^7",
