--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -26,7 +26,7 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
@@ -50,9 +50,9 @@ jobs:
         uses: wearerequired/lint-action@v1
         with:
           black: true
-          black_dir: src/pyflask
+          black_dir: "./src/pyflask"
           flake8: true
-          flake8_dir: src/pyflask
+          flake8_dir: "./src/pyflask"
           auto_fix: true
           github_token: ${{ secrets.BOT_ACTIONS }}
           git_email: "fairdataihub@gmail.com"
