--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           eslint: true
           prettier: true
-          auto_fix: true
+          prettier_extensions: "css,html,js,json,jsx,md,sass,scss,ts,tsx,vue"
 
       - name: Set up Python
         uses: actions/setup-python@v1
@@ -48,4 +48,3 @@ jobs:
         with:
           black: true
           flake8: true
-          auto_fix: true
