Added prettier auto fix

--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -34,6 +34,10 @@ jobs:
           eslint: true
           prettier: true
           prettier_extensions: "css,html,js,json,jsx,md,sass,scss,ts,tsx,vue"
+          auto_fix: true
+          github_token: ${{ secrets.BOT_ACTIONS }}
+          git_email: "fairdataihub@gmail.com"
+          git_name: "fairdataihub-bot"
 
       - name: Set up Python
         uses: actions/setup-python@v1
