--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "main": "background.js",
   "dependencies": {
     "@electron/remote": "^1.2.1",
+    "@element-plus/icons": "^0.0.11",
     "@tailwindcss/line-clamp": "^0.2.2",
     "axios": "^0.21.2",
     "axios-retry": "^3.2.0",
