--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -39,7 +39,7 @@ jobs:
           prettier: true
           prettier_extensions: "css,html,js,json,jsx,md,sass,scss,ts,tsx,vue"
           auto_fix: true
-          github_token: ${{ secrets.BOT_ACTIONS }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           git_email: "fairdataihub@gmail.com"
           git_name: "fairdataihub-bot"
 
@@ -56,7 +56,7 @@ jobs:
         with:
           black: true
           auto_fix: true
-          github_token: ${{ secrets.BOT_ACTIONS }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           git_email: "fairdataihub@gmail.com"
           git_name: "fairdataihub-bot"
 
