--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -4,10 +4,10 @@ on:
   # Trigger the workflow
   push:
     branches:
-      - ["production"]
+      - "production"
   pull_request:
     branches:
-      - ["production"]
+      - "production"
   workflow_dispatch:
 
 jobs:
