--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -43,4 +43,4 @@ jobs:
       - run: echo $GH_TOKEN
 
       - name: Build App
-        run: yarn electron:build-release --linux deb
+        run: yarn electron:build-release
