--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "semver": "^7.3.5",
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@iconify/vue": "^3.0.0",
