--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "axios": "^0.21.2",
     "axios-retry": "^3.2.0",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
+    "electron-data-holder": "^1.0.1",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
     "element-plus": "^1.1.0-beta.20",
