Update for linux env

--- a/dev/linux-sodacovid-dev.yml
+++ b/dev/linux-sodacovid-dev.yml
@@ -47,25 +47,26 @@ dependencies:
   - yarn=1.22.17
   - zlib=1.2.11
   - pip:
-    - altgraph==0.17.2
-    - aniso8601==9.0.1
-    - attrs==21.2.0
-    - certifi==2021.10.8
-    - charset-normalizer==2.0.7
-    - click==8.0.3
-    - flask==2.0.2
-    - flask-cors==3.0.10
-    - flask-restx==0.5.1
-    - idna==3.3
-    - itsdangerous==2.0.1
-    - jinja2==3.0.3
-    - jsonschema==4.2.1
-    - markupsafe==2.0.1
-    - pyinstaller==4.7
-    - pyinstaller-hooks-contrib==2021.3
-    - pyrsistent==0.18.0
-    - pytz==2021.3
-    - requests==2.26.0
-    - six==1.16.0
-    - urllib3==1.26.7
-    - werkzeug==2.0.2
+      - altgraph==0.17.2
+      - aniso8601==9.0.1
+      - attrs==21.2.0
+      - certifi==2021.10.8
+      - charset-normalizer==2.0.7
+      - click==8.0.3
+      - flask==2.0.2
+      - flask-cors==3.0.10
+      - flask-restx==0.5.1
+      - idna==3.3
+      - itsdangerous==2.0.1
+      - jinja2==3.0.3
+      - jsonschema==4.2.1
+      - markupsafe==2.0.1
+      - pyinstaller==4.7
+      - pyinstaller-hooks-contrib==2021.3
+      - pyrsistent==0.18.0
+      - python-dotenv==0.19.2
+      - pytz==2021.3
+      - requests==2.26.0
+      - six==1.16.0
+      - urllib3==1.26.7
+      - werkzeug==2.0.2
