--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "axios-retry": "^3.2.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.10.7",
     "doi-regex": "^0.1.10",
     "electron-data-holder": "^1.0.1",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
     "element-plus": "^1.2.0-beta.3",
     "fs-extra": "^10.0.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.0-rc.10",
     "ps-tree": "^1.2.0",
     "semver": "^7.3.5",
