--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
-.DS_Store
-node_modules
+# Dependencies
+/node_modules
+
 /dist
 
+# Production
+/build
 
-# local env files
+# Generated files
+.docusaurus
+.cache-loader
+
+# Misc
+.DS_Store
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Log files
 npm-debug.log*
