Downgraded electron to 15 and added splash screen

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "python:dev": "python ./src/pyflask/api.py",
     "electron:build": "vue-cli-service electron:build",
     "electron:build-release": "vue-cli-service electron:build -p always",
-    "electron:serve-precopy": "copyfiles -u 1 ./src/pyflask/** ./dist_electron",
+    "electron:serve-precopy": "copyfiles -u 1 ./src/pyflask/** ./dist_electron && copyfiles -u 1 ./src/splash-screen.html ./dist_electron",
     "electron:serve": "yarn electron:serve-precopy && vue-cli-service electron:serve",
     "electron:dev:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
@@ -61,7 +61,7 @@
     "babel-eslint": "^10.1.0",
     "copyfiles": "^2.4.1",
     "dotenv": "^10.0.0",
-    "electron": "^16.0.0",
+    "electron": "^15.0.0",
     "electron-devtools-installer": "^3.1.0",
     "electron-notarize": "^1.1.1",
     "eslint": "^6.7.2",
