--- a/dev/win-sodacovid-release.yml
+++ b/dev/win-sodacovid-release.yml
@@ -3,32 +3,26 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - bzip2=1.0.8
   - ca-certificates=2021.10.8
-  - git=2.33.1
-  - libffi=3.4.2
-  - libzlib=1.2.11
-  - nodejs=16.12.0
-  - openssl=3.0.0
-  - pip=21.3.1
-  - python=3.10.0
-  - python_abi=3.10
-  - setuptools=59.2.0
+  - certifi=2021.10.8
+  - nodejs=16.13.0
+  - openssl=1.1.1l
+  - pip=21.2.4
+  - python=3.9.7
+  - python_abi=3.9
+  - setuptools=58.0.4
   - sqlite=3.36.0
-  - tk=8.6.11
   - tzdata=2021e
-  - ucrt=10.0.20348.0
   - vc=14.2
-  - vs2015_runtime=14.29.30037
+  - vs2015_runtime=14.27.29016
   - wheel=0.37.0
-  - xz=5.2.5
+  - wincertstore=0.2
   - yarn=1.22.17
   - pip:
       - altgraph==0.17.2
       - aniso8601==9.0.1
       - attrs==21.2.0
-      - certifi==2021.10.8
-      - charset-normalizer==2.0.7
+      - charset-normalizer==2.0.9
       - click==8.0.3
       - colorama==0.4.4
       - flask==2.0.2
@@ -42,7 +36,7 @@ dependencies:
       - markupsafe==2.0.1
       - pefile==2021.9.3
       - pyinstaller==4.7
-      - pyinstaller-hooks-contrib==2021.3
+      - pyinstaller-hooks-contrib==2021.4
       - pyrsistent==0.18.0
       - python-dotenv==0.19.2
       - pytz==2021.3
