--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "@electron/remote": "^2.0.0",
-    "@element-plus/icons": "^0.0.11",
+    "@element-plus/icons-vue": "^0.2.4",
     "@tailwindcss/line-clamp": "^0.2.2",
     "axios": "^0.21.2",
     "axios-retry": "^3.2.0",
