--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "python:dev": "python ./src/pyflask/api.py",
     "electron:build": "vue-cli-service electron:build",
     "electron:build-release": "vue-cli-service electron:build -p always",
-    "electron:serve-precopy": "copyfiles -u 1 ./src/pyflask/** ./dist_electron && copyfiles -u 1 ./src/splash-screen.html ./dist_electron",
-    "electron:serve": "yarn electron:serve-precopy && vue-cli-service electron:serve",
+    "electron:pre-serve": "copyfiles -u 1 ./src/pyflask/** ./dist_electron && copyfiles -u 1 ./src/splash-screen.html ./dist_electron",
+    "electron:serve": "concurrently \"yarn gulp watch-dev\" \"yarn gulp copy-all\" \"vue-cli-service electron:serve\"",
     "electron:dev:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "dev": "yarn gulp watch-dev"
   },
   "main": "background.js",
   "repository": {
@@ -29,7 +30,6 @@
   "dependencies": {
     "@electron/remote": "^2.0.0",
     "@element-plus/icons-vue": "^0.2.4",
-    "@tailwindcss/line-clamp": "^0.2.2",
     "axios": "^0.21.2",
     "axios-retry": "^3.2.0",
     "core-js": "^3.6.5",
@@ -53,22 +53,32 @@
   },
   "devDependencies": {
     "@iconify/vue": "^3.0.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "autoprefixer": "^9",
+    "autoprefixer": "^10.4.0",
     "babel-eslint": "^10.1.0",
+    "concurrently": "^6.5.1",
     "copyfiles": "^2.4.1",
+    "del": "^6.0.0",
     "dotenv": "^10.0.0",
     "electron": "^15.0.0",
     "electron-devtools-installer": "^3.1.0",
     "electron-notarize": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.19.1",
-    "postcss": "^7",
+    "gulp": "^4.0.2",
+    "gulp-copy": "^4.0.1",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-run": "^1.7.1",
+    "postcss": "^8.4.5",
     "prettier": "^2.3.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss": "^3.0.7",
     "tailwindcss-debug-screens": "^2.1.0",
     "vue-cli-plugin-electron-builder": "~2.1.1"
   },
