--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:build-release": "vue-cli-service electron:build -p always",
     "electron:pre-serve": "copyfiles -u 1 ./src/pyflask/** ./dist_electron && copyfiles -u 1 ./src/splash-screen.html ./dist_electron",
-    "electron:serve": "concurrently \"yarn gulp watch-dev\" \"yarn gulp copy-all\" \"vue-cli-service electron:serve\"",
+    "pre-build": "yarn gulp build-css && yarn gulp copy-all",
+    "electron:serve": "concurrently \"yarn gulp watch-dev\" \"yarn pre-build\" \"vue-cli-service electron:serve\"",
     "electron:dev:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
