--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "electron:dev:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
-    "dev": "yarn gulp watch-dev"
+    "dev": "vue-cli-service electron:serve"
   },
   "main": "background.js",
   "repository": {
@@ -58,9 +58,9 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "5.0.0-rc.1",
+    "@vue/cli-plugin-eslint": "5.0.0-rc.1",
+    "@vue/cli-service": "5.0.0-rc.1",
     "@vue/compiler-sfc": "^3.0.0",
     "autoprefixer": "^10.4.0",
     "babel-eslint": "^10.1.0",
@@ -71,8 +71,8 @@
     "electron": "^15.0.0",
     "electron-devtools-installer": "^3.1.0",
     "electron-notarize": "^1.1.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.19.1",
+    "eslint": "7.0.0",
+    "eslint-plugin-vue": "^8.2.0",
     "gulp": "^4.0.2",
     "gulp-copy": "^4.0.1",
     "gulp-postcss": "^9.0.1",
