--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,3 +1,11 @@
 {
-  "include": ["./src/**/*"]
+  "allowJs": true,
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": ["src/**/*", "tests/**/*"],
+  "exclude": ["node_modules"]
 }
