--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ps-tree": "^1.2.0",
     "semver": "^7.3.5",
     "uuid": "^8.3.2",
+    "validator": "^13.7.0",
     "vue": "^3.0.0",
     "vue-router": "4",
     "vue3-lottie": "^1.1.0",
