--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "element-plus": "^1.2.0-beta.3",
     "fs-extra": "^10.0.0",
     "gsap": "^3.9.1",
+    "humanparser": "^2.6.0",
     "lodash": "^4.17.21",
     "mousetrap": "^1.6.5",
     "pinia": "^2.0.0-rc.10",
