--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.10.7",
     "doi-regex": "^0.1.10",
+    "dompurify": "^2.3.5",
     "electron-data-holder": "^1.0.1",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
