--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@electron/remote": "^2.0.0",
     "@element-plus/icons-vue": "^0.2.7",
     "@kangc/v-md-editor": "^2.3.13",
-    "@vueup/vue-quill": "^1.0.0-beta.7",
     "axios": "^0.21.2",
     "axios-retry": "^3.2.0",
     "core-js": "^3.6.5",
@@ -58,12 +57,12 @@
     "validator": "^13.7.0",
     "vue": "^3.0.0",
     "vue-router": "4",
-    "vue3-lottie": "^1.4.0",
+    "vue3-lottie": "^1.4.3-beta",
     "vue3-popper": "^1.4.0",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
-    "@iconify/vue": "^3.0.0",
+    "@iconify/vue": "^3.1.3",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.2",
