--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "soda-for-covid-19-research",
+  "name": "fair-share",
   "version": "0.0.1",
   "description": "Simplifying data curation for researchers working on COVID-19 research",
   "private": true,
-  "keywords": [],
-  "author": "Sanjay Soundarajan",
+  "keywords": [
+    "fair data",
+    "covid-19",
+    "covid",
+    "research",
+    "data curation",
+    "zenodo",
+    "github"
+  ],
+  "author": "Fair Data Innovations Hub <info@fairdataihub.org> (https://fairdataihub.org)",
   "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
