--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,17 +3,28 @@
     "es6": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:vue/essential"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:vue/essential",
+    "plugin:prettier/recommended"
+  ],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
+    "parser": "babel-eslint",
     "ecmaVersion": 2021,
     "sourceType": "module"
   },
-  "plugins": ["vue"],
+  "plugins": ["vue", "prettier"],
   "rules": {
-    "no-unused-vars": [2, { "args": "all", "argsIgnorePattern": "^_" }]
+    "no-unused-vars": [2, { "args": "all", "argsIgnorePattern": "^_" }],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
