--- a/package.json
+++ b/package.json
@@ -87,7 +87,9 @@
     "electron": "^16.0.0",
     "electron-devtools-installer": "^3.1.0",
     "electron-notarize": "^1.1.1",
-    "eslint": "7.0.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.2.0",
     "gulp": "^4.0.2",
     "gulp-copy": "^4.0.1",
