--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@electron/remote": "^2.0.0",
     "@element-plus/icons-vue": "^0.2.7",
+    "@headlessui/vue": "^1.5.0",
     "@kangc/v-md-editor": "^2.3.13",
     "axios": "^0.21.2",
     "axios-retry": "^3.2.0",
