--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "electron:build-preclean": "node ./scripts/prebuild.js",
     "python:clean": "yarn gulp clean-pre-python-build",
     "python:build": "yarn gulp clean-pre-python-build && python -m PyInstaller --onefile --clean ./src/pyflask/api.py --distpath ./src/pyflaskdist",
-    "python:dev": "python ./src/pyflask/api.py",
+    "python:dev": "python ./src/pyflask/api.py 7632",
     "electron:build": "yarn gulp clean-pre-electron-build && vue-cli-service electron:build",
     "electron:build-release": "yarn gulp clean-pre-electron-build && vue-cli-service electron:build -p always",
     "electron:pre-serve": "copyfiles -u 1 ./src/pyflask/** ./dist_electron && copyfiles -u 1 ./src/splash-screen.html ./dist_electron",
@@ -67,7 +67,7 @@
     "validator": "^13.7.0",
     "vue": "^3.0.0",
     "vue-router": "4",
-    "vue3-lottie": "^2.0.2",
+    "vue3-lottie": "^3.0.2-beta",
     "vue3-popper": "^1.4.0",
     "vuedraggable": "^4.1.0"
   },
