--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "validator": "^13.7.0",
     "vue": "^3.0.0",
     "vue-router": "4",
-    "vue3-lottie": "^3.0.2-beta",
+    "vue3-lottie": "^2.0.2",
     "vue3-popper": "^1.4.0",
     "vuedraggable": "^4.1.0"
   },
