--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
     "element-plus": "^2.0.1",
+    "find-free-port": "^2.0.0",
     "fs-extra": "^10.0.0",
     "gsap": "^3.9.1",
     "humanparser": "^2.6.0",
