--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "pinia": "^2.0.0-rc.10",
     "ps-tree": "^1.2.0",
     "semver": "^7.3.5",
+    "universal-analytics": "^0.5.3",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "vue": "^3.0.0",
