--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -21,7 +21,12 @@ jobs:
     - uses: actions/stale@v3
       with:
         repo-token: ${{ secrets.BOT_ACTIONS }}
-        stale-issue-message: 'Stale issue'
+        days-before-issue-stale: 30
+        days-before-issue-close: 14
         stale-pr-message: 'Stale pull request'
         stale-issue-label: 'no-issue-activity'
         stale-pr-label: 'no-pr-activity'
+        stale-issue-message: "This issue is stale because it has been open for 30 days with no activity."
+        close-issue-message: "This issue was closed because it has been inactive for 14 days since being marked as stale."
+        days-before-pr-stale: -1
+        days-before-pr-close: -1
