--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
+    "renovate": "32.33.1",
     "tailwindcss": "^3.0.7",
     "tailwindcss-debug-screens": "^2.1.0",
     "vue-cli-plugin-electron-builder": "~2.1.1"
