--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "copyfiles": "^2.4.1",
     "cz-conventional-changelog": "3.3.0",
     "del": "^6.0.0",
+    "devmoji": "2.3.0",
     "dotenv": "^10.0.0",
     "electron": "^17.4.0",
     "electron-devtools-installer": "^3.1.0",
