--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           prettier: true
           prettier_extensions: "css,html,js,json,jsx,md,sass,scss,ts,tsx,vue"
+          commit_message: "style: 🎨 code style issues with ${linter}"
           auto_fix: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
           git_email: "fairdataihub@gmail.com"
@@ -56,6 +57,7 @@ jobs:
         with:
           black: true
           auto_fix: true
+          commit_message: "style: 🎨 code style issues with ${linter}"
           github_token: ${{ secrets.GITHUB_TOKEN }}
           git_email: "fairdataihub@gmail.com"
           git_name: "fairdataihub-bot"
