--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fairshare",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Your one-stop tool for making biomedical research data and software FAIR",
   "private": true,
   "keywords": [
@@ -18,7 +18,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "electron:build-preclean": "node ./scripts/prebuild.js",
+    "lint-es": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx|vue)\"",
+    "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx|vue|json)\" --write",
     "python:clean": "yarn gulp clean-pre-python-build",
     "python:build": "yarn gulp clean-pre-python-build && python -m PyInstaller --onefile --clean ./src/pyflask/api.py --distpath ./src/pyflaskdist",
     "python:dev": "python ./src/pyflask/api.py 7632",
@@ -28,9 +29,21 @@
     "pre-build": "yarn gulp build-css && yarn gulp copy-all",
     "electron:serve": "yarn gulp copy-all && vue-cli-service electron:serve",
     "electron:dev:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall": "husky install && electron-builder install-app-deps ",
     "postuninstall": "electron-builder install-app-deps",
-    "dev": "vue-cli-service electron:serve"
+    "dev": "yarn electron:serve",
+    "commit": "cz"
+  },
+  "lint-staged": {
+    "./src/**/*.{ts,js,jsx,tsx,vue}": [
+      "yarn lint-es --fix",
+      "yarn format"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "main": "background.js",
   "repository": {
@@ -52,7 +65,7 @@
     "electron-data-holder": "^1.0.1",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
-    "element-plus": "^2.0.1",
+    "element-plus": "^2.1.11",
     "find-free-port": "^2.0.0",
     "fs-extra": "^10.0.0",
     "gsap": "^3.9.1",
@@ -75,6 +88,8 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "16.2.3",
+    "@commitlint/config-conventional": "16.2.1",
     "@iconify/vue": "^3.1.4",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
@@ -85,11 +100,14 @@
     "@vue/compiler-sfc": "^3.0.0",
     "autoprefixer": "^10.4.0",
     "babel-eslint": "^10.1.0",
+    "commitizen": "4.2.4",
     "concurrently": "^6.5.1",
     "copyfiles": "^2.4.1",
+    "cz-conventional-changelog": "3.3.0",
     "del": "^6.0.0",
+    "devmoji": "2.3.0",
     "dotenv": "^10.0.0",
-    "electron": "^17.0.0",
+    "electron": "^17.4.0",
     "electron-devtools-installer": "^3.1.0",
     "electron-notarize": "^1.1.1",
     "eslint": "7.32.0",
@@ -100,9 +118,12 @@
     "gulp-copy": "^4.0.1",
     "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
+    "husky": "7.0.4",
+    "lint-staged": "12.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
+    "renovate": "32.33.1",
     "tailwindcss": "^3.0.7",
     "tailwindcss-debug-screens": "^2.1.0",
     "vue-cli-plugin-electron-builder": "~2.1.1"
