refactor: ♻️ add better styling for starting workflows

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "url": "https://github.com/fairdataihub/FAIRshare.git"
   },
   "dependencies": {
-    "@electron/remote": "2.0.1",
+    "@electron/remote": "2.0.8",
     "@element-plus/icons-vue": "0.2.7",
     "@headlessui/vue": "1.5.0",
     "@kangc/v-md-editor": "2.3.13",
@@ -61,10 +61,10 @@
     "crypto-js": "4.1.1",
     "dayjs": "1.10.7",
     "doi-regex": "0.1.10",
-    "dompurify": "2.3.5",
+    "dompurify": "2.3.8",
     "electron-data-holder": "1.0.1",
     "electron-log": "4.4.4",
-    "electron-updater": "4.6.1",
+    "electron-updater": "4.6.5",
     "element-plus": "2.1.11",
     "find-free-port": "2.0.0",
     "fs-extra": "10.0.0",
@@ -75,14 +75,14 @@
     "lodash": "4.17.21",
     "marked": "4.0.12",
     "mousetrap": "1.6.5",
-    "pinia": "2.0.9",
+    "pinia": "2.0.14",
     "ps-tree": "1.2.0",
     "semver": "7.3.5",
     "universal-analytics": "0.5.3",
     "uuid": "8.3.2",
     "validator": "13.7.0",
-    "vue": "3.2.26",
-    "vue-router": "4.0.12",
+    "vue": "3.2.33",
+    "vue-router": "4.0.13",
     "vue3-lottie": "2.1.0",
     "vue3-popper": "1.4.1",
     "vuedraggable": "4.1.0"
@@ -90,14 +90,14 @@
   "devDependencies": {
     "@commitlint/cli": "16.2.4",
     "@commitlint/config-conventional": "16.2.4",
-    "@iconify/vue": "3.1.4",
-    "@tailwindcss/forms": "0.4.0",
-    "@tailwindcss/line-clamp": "0.3.0",
+    "@iconify/vue": "3.2.1",
+    "@tailwindcss/forms": "0.5.1",
+    "@tailwindcss/line-clamp": "0.4.0",
     "@tailwindcss/typography": "0.5.2",
-    "@vue/cli-plugin-babel": "5.0.0-rc.1",
-    "@vue/cli-plugin-eslint": "5.0.0-rc.1",
-    "@vue/cli-service": "5.0.0-rc.1",
-    "@vue/compiler-sfc": "3.2.26",
+    "@vue/cli-plugin-babel": "5.0.4",
+    "@vue/cli-plugin-eslint": "5.0.4",
+    "@vue/cli-service": "5.0.4",
+    "@vue/compiler-sfc": "3.2.33",
     "autoprefixer": "10.4.1",
     "babel-eslint": "10.1.0",
     "commitizen": "4.2.4",
@@ -120,11 +120,11 @@
     "gulp-rename": "2.0.0",
     "husky": "7.0.4",
     "lint-staged": "12.4.0",
-    "postcss": "8.4.5",
+    "postcss": "8.4.13",
     "prettier": "2.5.1",
     "prettier-plugin-tailwindcss": "0.1.8",
     "renovate": "32.33.1",
-    "tailwindcss": "3.0.9",
+    "tailwindcss": "3.0.24",
     "tailwindcss-debug-screens": "2.2.1",
     "vue-cli-plugin-electron-builder": "2.1.1"
   },
