chore(deps): 🔗 update dependency eslint to v8 and update babel-eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "ecmaVersion": 2021,
     "sourceType": "module"
   },
