--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "vuedraggable": "4.1.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "7.17.0",
     "@commitlint/cli": "16.3.0",
     "@commitlint/config-conventional": "16.2.4",
     "@iconify/vue": "3.2.1",
@@ -110,7 +111,7 @@
     "electron": "17.4.4",
     "electron-devtools-installer": "3.2.0",
     "electron-notarize": "1.2.1",
-    "eslint": "7.32.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-vue": "8.7.1",
