--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fairshare",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Your one-stop tool for making biomedical research data and software FAIR",
   "private": true,
   "keywords": [
@@ -12,7 +12,7 @@
     "zenodo",
     "github"
   ],
-  "author": "Fair Data Innovations Hub <info@fairdataihub.org> (https://fairdataihub.org)",
+  "author": "Fair Data Innovations Hub (https://fairdataihub.org)",
   "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
