--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,12 @@
     "es6": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:vue/essential", "plugin:prettier/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:vue/essential",
+    "plugin:prettier/recommended",
+    "plugin:storybook/recommended"
+  ],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
