--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "autoprefixer": "10.4.7",
     "babel-eslint": "10.1.0",
     "babel-loader": "^8.2.5",
+    "chromatic": "6.5.4",
     "commitizen": "4.2.4",
     "concurrently": "7.2.0",
     "copyfiles": "2.4.1",
