--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "postcss": "8.4.14",
     "prettier": "2.6.2",
     "prettier-plugin-tailwindcss": "0.1.11",
+    "pretty": "2.0.0",
     "renovate": "32.55.1",
     "tailwindcss": "3.0.24",
     "tailwindcss-debug-screens": "2.2.1",
