fix: 🐛 add fixes for figshare release (#175)
* refactor: ♻️ update comments

* fix: 🐛 remove lottie branding

* fix: 🐛 add fixes for code smells

* feat: ✨ add buttons to storybook

* fix: 🐛 remove checkbox in figshare categories

* refactor: ♻️ Edited text from the summary page

* feat: ✨ add actionable landing page

* refactor: ♻️ update figshare help links

* fix: 🐛 continue button not being shown on figshare login

* feat: ✨ add standards to checklist

* feat: ✨ add a success spinner to figshare login

* fix: 🐛 update env variables for figsh.com

* fix: 🐛 generateLicense option not being updated

* fix: 🐛 revert select-v2 element-plus/element-plus#7789

* style: 🎨 fix code style issues with Prettier

* fix: 🐛 update encoding on github file upload

* chore: 🔧 disable other data type

* fix: 🐛 parse figshare response

* refactor: ♻️ enable figshare

* fix: 🐛 enable figshare publish

* refactor: ♻️ allow users to override manual identifier

* chore: 🔧 downgrade version num for testing

* feat: ✨ add a mandatory validator for categories

* fix: 🐛 fixes for code smells

Co-authored-by: bvhpatel <8172375+bvhpatel@users.noreply.github.com>
Co-authored-by: fairdataihub-bot <fairdataihub@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ package-lock.json
 
 # local env files
 .env.local
+env.local
 .env.*.local
 
 # Log files
@@ -33,5 +34,6 @@ api.spec
 *.ipynb
 .env
 .env.production
+env.production
 src/assets/css/tailwind.css
 jupyter/dnt.fdih
