--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
     "dev": "yarn electron:serve",
     "commit": "cz",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "./src/**/*.{ts,js,jsx,tsx,vue,json}": [
       "yarn lint-es --fix",
       "yarn format"
-    ]
+    ],
+    "*.js": "eslint --cache --fix"
   },
   "config": {
     "commitizen": {
@@ -58,7 +60,6 @@
     "@headlessui/vue": "1.6.4",
     "@kangc/v-md-editor": "2.3.15",
     "axios": "0.27.2",
-    "axios-retry": "3.2.5",
     "core-js": "3.22.7",
     "crypto-js": "4.1.1",
     "dayjs": "1.11.2",
